--- a/projetos/Aula12 - Nuvem de Partículas.ipynb
+++ b/projetos/Aula12 - Nuvem de Partículas.ipynb
@@ -47,7 +47,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 8,
+      "execution_count": 3,
       "metadata": {
         "id": "bRaaRAg45TTJ"
       },
@@ -55,16 +55,24 @@
       "source": [
         "from random import uniform\n",
         "from typing import List\n",
+        "from typing import Dict\n",
         "\n",
         "from dataclasses import dataclass\n",
         "from dataclasses import field\n",
         "\n",
         "@dataclass\n",
         "class Particula:\n",
+        "    # Tamanho da partícula\n",
         "    n: int\n",
+        "\n",
+        "    # Solução\n",
         "    x: List[float] = field(default_factory=list)\n",
+        "    \n",
+        "    # Velocidade e deslocamento da partículoa\n",
         "    v: List[float] = field(default_factory=list)\n",
-        "    pbest:float = 0\n",
+        "\n",
+        "    # Melhor solução já encontrada pela partícula\n",
+        "    pbest: Dict = field(default_factory=dict)\n",
         "    \n",
         "    tipo: str = 'MIN'\n",
         "\n",
@@ -73,12 +81,9 @@
         "            self.x = [uniform(-10, 10) for _ in range(self.n)]\n",
         "            self.v = [uniform(-1, 1) for _ in range(self.n)]\n",
         "       \n",
-        "        if self.tipo == 'MIN':\n",
-        "            self.pbest = 999_999\n",
-        "        elif self.tipo == 'MAX':\n",
-        "            self.pbest = -999_999\n",
-        "        else:\n",
-        "            raise RuntimeError('Tipo inválido: MAX ou MIN')\n"
+        "        self.pbest['x'] = self.x\n",
+        "        self.pbest['fitness'] = 999_999 if self.tipo == 'MIN' else -999_999\n",
+        "\n"
       ]
     },
     {
@@ -101,7 +106,7 @@
       "metadata": {
         "id": "ZqeANaB09QHu"
       },
-      "execution_count": 9,
+      "execution_count": 4,
       "outputs": []
     },
     {
@@ -114,13 +119,16 @@
         "def f(p: Particula):\n",
         "    x1 = p.x[0]\n",
         "    x2 = p.x[1]\n",
+        "\n",
+        "    if (x1 - x2) <= 1: return 999_999\n",
+        "\n",
         "    return abs(2 * x1 ** 2 - 6 * x1 - 9) + \\\n",
-        "           abs(2 * x2 ** 2 - 6 * x2 - 9)"
+        "           abs(2 * x2 ** 2 - 6 * x2 - 9) "
       ],
       "metadata": {
         "id": "Xh_E-FfX-Nxc"
       },
-      "execution_count": 10,
+      "execution_count": 15,
       "outputs": []
     },
     {
@@ -144,14 +152,24 @@
         "    for p in P:\n",
         "\n",
         "        # - Se f(p) < pbest, então pbest = f(p)\n",
-        "        if f(p) < p.pbest:\n",
-        "            p.pbest = f(p)\n",
-        "    \n",
+        "        if p.tipo == 'MIN':\n",
+        "            if f(p) < p.pbest['fitness']:\n",
+        "                p.pbest['fitness'] = f(p)\n",
+        "                p.pbest['x'] = p.x.copy()\n",
+        "        else:\n",
+        "            if f(p) > p.pbest['fitness']:\n",
+        "                p.pbest['fitness'] = f(p)\n",
+        "                p.pbest['x'] = p.x.copy()\n",
+        "\n",
         "    # b. gbest = melhor pbest da vizinhaça\n",
         "    for p in P:\n",
-        "        if p.pbest < gbest.pbest:\n",
-        "            gbest = deepcopy(p)\n",
-        "    \n",
+        "        if p.tipo == 'MIN':\n",
+        "            if p.pbest['fitness'] < gbest.pbest['fitness']:\n",
+        "                gbest = deepcopy(p)\n",
+        "        else:\n",
+        "            if p.pbest['fitness'] > gbest.pbest['fitness']:\n",
+        "                gbest = deepcopy(p)\n",
+        "\n",
         "    # c. Para cada partícula p em P\n",
         "    for p in P:\n",
         "\n",
@@ -161,37 +179,43 @@
         "            #          + c1 * r1 (pbest - xi) \n",
         "            #          + c2 * r2 (gbest - xi)\n",
         "            p.v[i] = W * p.v[i] \\\n",
-        "                        + C1 * random() * (p.pbest - p.x[i]) \\\n",
+        "                        + C1 * random() * (p.pbest['x'][i] - p.x[i]) \\\n",
         "                        + C2 * random() * (gbest.x[i] - p.x[i])\n",
         "      \n",
         "            # - pi = pi + vi\n",
         "            p.x[i] += p.v[i]\n",
+        "\n",
+        "    g += 1\n",
         "\n",
         "# 3. retorna o gbest\n",
         "print(gbest)"
       ],
       "metadata": {
         "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 248
+          "base_uri": "https://localhost:8080/"
         },
         "id": "7es5eX5V-Mqf",
-        "outputId": "80369f57-b95b-4b37-9eaa-8d400a01dbab"
+        "outputId": "06c16048-08b0-4727-fbd5-12621919a57c"
       },
-      "execution_count": 11,
+      "execution_count": 16,
       "outputs": [
         {
-          "output_type": "error",
-          "ename": "KeyboardInterrupt",
-          "evalue": "ignored",
-          "traceback": [
-            "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-            "\u001b[0;31mKeyboardInterrupt\u001b[0m                         Traceback (most recent call last)",
-            "\u001b[0;32m<ipython-input-11-adc089aa339d>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m     33\u001b[0m             \u001b[0mp\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mv\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0mi\u001b[0m\u001b[0;34m]\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mW\u001b[0m \u001b[0;34m*\u001b[0m \u001b[0mp\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mv\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0mi\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;31m \u001b[0m\u001b[0;31m\\\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     34\u001b[0m                         \u001b[0;34m+\u001b[0m \u001b[0mC1\u001b[0m \u001b[0;34m*\u001b[0m \u001b[0mrandom\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m \u001b[0;34m*\u001b[0m \u001b[0;34m(\u001b[0m\u001b[0mp\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mpbest\u001b[0m \u001b[0;34m-\u001b[0m \u001b[0mp\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mx\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0mi\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;31m \u001b[0m\u001b[0;31m\\\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 35\u001b[0;31m                         \u001b[0;34m+\u001b[0m \u001b[0mC2\u001b[0m \u001b[0;34m*\u001b[0m \u001b[0mrandom\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m \u001b[0;34m*\u001b[0m \u001b[0;34m(\u001b[0m\u001b[0mgbest\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mx\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0mi\u001b[0m\u001b[0;34m]\u001b[0m \u001b[0;34m-\u001b[0m \u001b[0mp\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mx\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0mi\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     36\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     37\u001b[0m             \u001b[0;31m# - pi = pi + vi\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-            "\u001b[0;31mKeyboardInterrupt\u001b[0m: "
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Particula(n=2, x=[4.073249440739792, -1.050156839530468], v=[-0.41554716576980405, -0.0017901190827231146], pbest={'x': [4.073249440739792, -1.050156839530468], 'fitness': 0.7501748190566477}, tipo='MIN')\n"
           ]
         }
       ]
+    },
+    {
+      "cell_type": "code",
+      "source": [],
+      "metadata": {
+        "id": "jtOjvkzIVqsX"
+      },
+      "execution_count": null,
+      "outputs": []
     }
   ]
 }
